changed slide layout, removed proprietary fonts

--- a/tex/latex/rub-beamer/beamercolorthemeRub.sty
+++ b/tex/latex/rub-beamer/beamercolorthemeRub.sty
@@ -1,5 +1,7 @@
 % Copyright 2007 by Till Tantau
 % Edited by Sebastian Jeworutzki 2012
+% Edited by Orell Garten 2019
+
 % This file may be distributed and/or modified
 %
 % 1. under the LaTeX Project Public License and/or
