--- a/tex/latex/rub-beamer/beamerinnerthemeRub.sty
+++ b/tex/latex/rub-beamer/beamerinnerthemeRub.sty
@@ -1,6 +1,7 @@
 % Copyright 2007 by Till Tantau
 % Edited by: Sebastian Jeworutzki 2012
-%
+%% Edited by Orell Garten 2019
+
 % This file may be distributed and/or modified
 %
 % 1. under the LaTeX Project Public License and/or
@@ -62,11 +63,13 @@
     \newlength\graphicwidth
     \setlength\graphicheight{\heightof{\includegraphics[width=\paperwidth]{\inserttitlegraphicrub}}}   %Standard: an Breite orientieren und Breite messen
     \setlength\graphicwidth{\widthof{\includegraphics[width=\paperwidth]{\inserttitlegraphicrub}}}
-    \ifdim \graphicheight<\paperheight  % Sollte bei maximierter Breite, das Bild nicht hoch genug sein, an Höhe orientieren
-        \includegraphics[height=\paperheight, keepaspectratio = true]{\inserttitlegraphicrub}
-    \else
-        \includegraphics[width=\paperwidth, keepaspectratio = true]{\inserttitlegraphicrub}
-    \fi
+%     \ifdim \graphicheight<\paperheight  % Sollte bei maximierter Breite, das Bild nicht hoch genug sein, an Höhe orientieren
+%         \includegraphics[height=\paperheight, keepaspectratio = true]{\inserttitlegraphicrub}
+%         \includegraphics[height=0.5\paperheight, keepaspectratio = true]{\inserttitlegraphicrub}
+%     \else
+%         \includegraphics[width=\paperwidth, keepaspectratio = true]{\inserttitlegraphicrub}
+%     \fi
+      \includegraphics[height=0.45\paperheight, width=0.91\paperwidth]{\inserttitlegraphicrub}
     }
     
 
@@ -102,11 +105,11 @@
                 \usebeamerfont{date}\insertdate
             \end{beamercolorbox}
             \vskip1em\par
-            \begin{beamercolorbox}{institute}
-                \usebeamerfont{institute}\insertinstitute
-            \end{beamercolorbox}
             \begin{beamercolorbox}{author}
                 \usebeamerfont{author}\insertauthor
+            \end{beamercolorbox}
+            \begin{beamercolorbox}{institute}
+                \usebeamerfont{institute}\insertinstitute
             \end{beamercolorbox}
             \vspace{2em} 
             % Sponsorlogo einfügen - sponosr ist 0, falls kein Bild angebeben wurde
@@ -129,13 +132,17 @@
 \node[anchor=north west, inner sep=0pt]  at (current page.north west) {
     \begin{tikzpicture}[remember picture,overlay]
       % Node mit Titelgrafik.
-      \node[anchor=north west, inner sep=0pt,yshift=0cm,xshift=-2mm,line width=0pt]  at (current page.north west) {\TitleImage};
+      %\node[anchor=north west, inner sep=0pt,yshift=0cm,xshift=-2mm,line width=0pt]  at (current page.north west) {\TitleImage};
+      \node[anchor=north west, inner sep=0pt,yshift=0cm,xshift=-2.5mm, line width=0pt]  at (current page.north west) {\TitleImage};
+      % Weißer Hintergrund. Das Bild wird überdeckt.
+      %\draw[style={white, line width=0pt, fill=white}] (current page.south west) rectangle (\paperwidth,-52mm);
+      \draw[style={white, line width=0pt, fill=white}] (current page.south west) rectangle (\paperwidth,-0.45\paperheight);
+      \draw[style={white, line width=0pt, fill=white}] (current page.south east) rectangle (0.91\paperwidth,0.1\paperheight);
       %Logo
       \node[anchor=north west,xshift=-2.45cm, yshift=1pt, rectangle, inner sep=0pt] at (current page.north east){\pgfuseimage{logoTitle}};
-      % Weißer Hintergrund. Das Bild wird überdeckt.
-      \draw[style={white, line width=0pt, fill=white}] (current page.south west) rectangle (\paperwidth,-52mm);
+
       % Node mit dem Text
-      \node[anchor=north west, inner sep=0pt, xshift=7mm,yshift=-55mm]  at (current page.north west) {
+      \node[anchor=north west, inner sep=0pt, xshift=7mm,yshift=-42mm]  at (current page.north west) {
         \begin{minipage}{\linewidth}
             \begin{beamercolorbox}{title}
 %                 \pgfuseimage{wortmarkeTitle}\\[0.3cm]
@@ -157,11 +164,11 @@
             \else 
             \begin{minipage}{8cm}         % wenn ja, Platz fürs Logo lassen
             \fi
-            \begin{beamercolorbox}[sep=0pt]{institute}
-                \noindent\usebeamerfont{institute}\insertinstitute
-            \end{beamercolorbox}
             \begin{beamercolorbox}{author}
                 \noindent\usebeamerfont{author}\insertauthor
+            \end{beamercolorbox}
+            \begin{beamercolorbox}[sep=0pt]{institute}
+                \noindent\usebeamerfont{institute}\insertinstitute
             \end{beamercolorbox}
             \end{minipage}
             \vfill
@@ -173,7 +180,8 @@
                     \pgfuseimage{sponsor}
                     \else
                      \fi}; 
- \end{tikzpicture}      
+ \end{tikzpicture} 
+
 }  % Ende der Definition: Alternativ
 
 
@@ -212,12 +220,13 @@
             \else 
             \begin{minipage}{8cm}         % wenn ja, Platz fürs Logo lassen
             \fi
+            \begin{beamercolorbox}{author}
+               \usebeamerfont{author}\insertauthor
+            \end{beamercolorbox}
             \begin{beamercolorbox}[sep=0pt]{institute}
                 \usebeamerfont{institute}\insertinstitute
             \end{beamercolorbox}
-            \begin{beamercolorbox}{author}
-                 \usebeamerfont{author}\insertauthor
-            \end{beamercolorbox}
+
             \vspace{1cm}
             \end{minipage}
             \end{minipage}};
@@ -267,12 +276,13 @@
             \else 
             \begin{minipage}{8cm}         % wenn ja, Platz fürs Logo lassen
             \fi
+            \begin{beamercolorbox}{author}
+               \usebeamerfont{author}\insertauthor
+            \end{beamercolorbox}
             \begin{beamercolorbox}[sep=-1pt]{institute}
                 \usebeamerfont{institute}\insertinstitute
             \end{beamercolorbox}
-            \begin{beamercolorbox}{author}
-                 \usebeamerfont{author}\insertauthor
-            \end{beamercolorbox}
+
             \vspace{1cm}
             \end{minipage}
             \end{minipage}};
@@ -310,6 +320,7 @@
 % Part page: Rub
 \defbeamertemplate*{part page}{Rub}[1][]
 {
+WELL
   \begin{centering}
     {\usebeamerfont{part name}\usebeamercolor[fg]{part name}\partname~\insertromanpartnumber}
     \vskip1em\par
@@ -324,11 +335,11 @@
 % Table of contents
 %
 
-%\defbeamertemplateparent{sections/subsections in toc}{section in toc,subsection in toc,subsubsection in toc}
-{}
-
-%\defbeamertemplateparent{sections/subsections in toc shaded}{section in toc shaded,subsection in toc shaded,subsubsection in toc shaded}[1][20]
-%{[#1]}
+% \defbeamertemplateparent{sections/subsections in toc}{section in toc,subsection in toc,subsubsection in toc}
+% {}
+%
+% \defbeamertemplateparent{sections/subsections in toc shaded}{section in toc shaded,subsection in toc shaded,subsubsection in toc shaded}[1][20]
+% {[#1]}
 
 
 % (sub-)section in toc: Rub
@@ -538,6 +549,7 @@
 % Blocks
 \defbeamertemplate*{block begin}{Rub}
 {
+\setlength{\textwidth}{0.97\textwidth}%
   \par\vskip\medskipamount%
   \begin{beamercolorbox}[colsep*=.75ex]{block title}
     \usebeamerfont*{block title}\insertblocktitle%
@@ -555,6 +567,7 @@
 
 \defbeamertemplate*{block alerted begin}{Rub}
 {
+  \setlength{\textwidth}{0.97\textwidth}%
   \par\vskip\medskipamount%
   \begin{beamercolorbox}[colsep*=.75ex]{block title alerted}
     \usebeamerfont*{block title alerted}\insertblocktitle%
@@ -574,6 +587,7 @@
 
 \defbeamertemplate*{block example begin}{Rub}
 {
+  \setlength{\textwidth}{0.97\textwidth}%
   \par\vskip\medskipamount%
   \begin{beamercolorbox}[colsep*=.75ex]{block title example}
     \usebeamerfont*{block title example}\insertblocktitle%
