--- a/tex/latex/rub-beamer/beamerthemeRub.sty
+++ b/tex/latex/rub-beamer/beamerthemeRub.sty
@@ -1,5 +1,7 @@
 % Copyright 2007 by Till Tantau
 % Edited by Sebastian Jeworutzki 2012
+% Edited by Orell Garten 2019
+
 % This file may be distributed and/or modified
 %
 % 1. under the LaTeX Project Public License and/or
@@ -32,7 +34,8 @@
 \useoutertheme{Rub}
 \useinnertheme{Rub}
 \usecolortheme{Rub}
-\usefonttheme{Rub}
+\usefonttheme{professionalfonts}
+% \usefonttheme{Rub}
 
 % Einstellungen für einzelne Elemente
 \setbeamertemplate{blocks}[]
@@ -145,4 +148,3 @@
 
 \mode
 <all>
-
